# cu-ece464

./: .editorconfig  .gitignore  README.md  flake.nix  pyproject.toml  treefmt.toml
jankins/: __init__.py  message.py  serial.py  write-up.md
jankins/client/: __init__.py  __main__.py  config.py  work.py
jankins/server/: __init__.py  __main__.py  config.py  connection.py
jankins/server/db/: __init__.py  synthetic.sql  tables.sql
ps/1/: dataset.sql  dataset.sqlite  part-1.md  part-3.md  part2.py  part2_test.py  part3.py  part3_test.py
ps/2/: query.py  quotes.json  scrape.py  write-up.md
